--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,11 @@
     <script data-require="angular.js@*" data-semver="1.3.7"
             src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular.js"></script>
 
+    <link rel="stylesheet" href="https://rawgit.com/novus/nvd3/master/nv.d3.min.css"/>
+    <script src="https://rawgit.com/mbostock/d3/master/d3.min.js"></script>
+    <script src="https://rawgit.com/novus/nvd3/master/nv.d3.min.js"></script>
+    <script src="https://rawgit.com/krispo/angular-nvd3/master/dist/angular-nvd3.js"></script>
+
     <script src="../dist/angular-panel.js"></script>
     <link rel="stylesheet" href="../dist/angular-panel.css"/>
 
@@ -29,6 +34,14 @@
 
         <h1 class="text-center">Angular Bootstrap Panel Demo</h1>
 
+        <ab-panel panel-model="panel0" panel-collapse="panelCollapse()" panel-edit="panelEdit()"
+                  panel-refresh="panelRefresh()" panel-remove="panelRemove()" style="margin: 10px;">
+            <ab-panel-body>
+                <nvd3 options="options" data="data"></nvd3>
+            </ab-panel-body>
+        </ab-panel>
+
+
         <ab-panel panel-model="panel" panel-collapse="panelCollapse()" panel-edit="panelEdit()"
                   panel-refresh="panelRefresh()" panel-remove="panelRemove()" style="margin: 10px;">
             <ab-panel-body>
@@ -36,27 +49,30 @@
             </ab-panel-body>
         </ab-panel>
 
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="panelContentInput" class="col-sm-2 control-label">Content</label>
+        <div style="border: 1px dotted; padding: 15px;">
+            <h3>Change the model of the panel...</h3>
 
-                <div class="col-sm-10">
-                    <input type="string" class="form-control" id="panelContentInput" placeholder="None"
-                           ng-model="panel.content">
-                </div>
-            </div>
+            <form class="form-horizontal" style="margin-top: 15px;">
+                <div class="form-group">
+                    <label for="panelContentInput" class="col-sm-2 control-label">Content</label>
 
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" ng-model="panel.collapsed">Collapse
-                        </label>
+                    <div class="col-sm-10">
+                        <input type="string" class="form-control" id="panelContentInput" placeholder="None"
+                               ng-model="panel.content">
                     </div>
                 </div>
-            </div>
-        </form>
 
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-model="panel.collapsed">Collapse
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
