Forgot to rename second panel model.

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,10 +42,10 @@
         </ab-panel>
 
 
-        <ab-panel panel-model="panel" panel-collapse="panelCollapse()" panel-edit="panelEdit()"
+      <ab-panel panel-model="panel1" panel-collapse="panelCollapse()" panel-edit="panelEdit()"
                   panel-refresh="panelRefresh()" panel-remove="panelRemove()" style="margin: 10px;">
             <ab-panel-body>
-                <some-other-directive display-text="panel.content"></some-other-directive>
+              <some-other-directive display-text="panel1.content"></some-other-directive>
             </ab-panel-body>
         </ab-panel>
 
@@ -58,7 +58,7 @@
 
                     <div class="col-sm-10">
                         <input type="string" class="form-control" id="panelContentInput" placeholder="None"
-                               ng-model="panel.content">
+                               ng-model="panel1.content">
                     </div>
                 </div>
 
